# minislug

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  options.rs  translit.rs
tests/: slugify.rs
